[package]
name = "newc"
version = "0.2.0"
edition = "2021"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
dns-lookup = "2.0.4"
linux-info = {version = "0.1.15", features = ["serde1"]}
nix = { version = "0.27.1", features = ["fs", "process", "user"]}
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking", "json", "native-tls"]}
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
url = "2.4.1"
protocol = { "path" = "../protocol"}
