[package]
name = "miasma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["tokio", "headers" ]}
axum-macros = "0.3.8"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = "4.4.8"
futures = "0.3.28"
rustls = "0.21.8"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
surrealdb = "1.0.0"
thiserror = "1.0.47"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io"]}
tower = "0.4.13"
tower-http = "0.4.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(all())']
#rustflags = ["--cfg", "uuid_unstable"]
