[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
cidr = { version = "0.2.2", feature = ["serde"]}
serde = { version = "1.0.171", features = ["derive"]}
serde_json = "1.0.105"
sysinfo = { version = "0.29.4", features = ["serde"]}
uuid = { version = "1.4.0", features = ["serde", "v4"] }
miasma = { path = "../miasma"}
